--- a/src/posts/2013-01-18-dat201-project.md
+++ b/src/posts/2013-01-18-dat201-project.md
@@ -3,16 +3,17 @@ layout: post
 title: DAT201 Project
 date: 2013-01-18 08:42:36.000000000 +00:00
 categories:
-- dat201
+    - dat201
 tags: []
 status: publish
 type: post
 published: true
 meta:
-  _edit_last: '1'
+    _edit_last: "1"
 author: Dec Norton
 comments: true
 ---
+
 <p>For our DAT201 project we've been asked to prepare a performative piece for an exhibition towards the end of the year. I've already started research for the essay exploring technology and art in practice, in which I chose to explore the relationship between music and technology and the evolution of interaction when producing music.</p>
 
 <!--more-->
